# clock

./: .gitignore  CMakeLists.txt  Makefile  TV_45.PxProj  TV_45.fbx  TV_45.glb  TV_45.max  TV_45.mtl  TV_45.xml  TV_45_maya.mtl  TV_46.mtl  TV_46_for_rpi.mtl  clock_porgram_compile  clock_program_compile  compite.txt  cross-compile.sh  main.cpp  pipe_read.cpp  res_prib3.fbx  test.cpp  uart_read.cpp  uart_read_compile
_models/: uiz_6k.3ds
_models_for_unix/: tv-45_frame.mtl  tv-45_needle.mtl
_models_for_unix/1/: config.txt  cover.mtl  glass.mtl  green.mtl  needle_2.mtl  red.mtl  scale.mtl
_models_for_unix/ite_2t_2/: needle_1.mtl  needle_2.mtl  scale.mtl  yellow.mtl
_models_for_win/: tv-45_frame.mtl  tv-45_needle.mtl
tv_45/: circle.igs  circle.mtl  korpus.PxProj  korpus.fbx  korpus.mtl  korpus.xml  strelka.mtl
